WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186063
Media elements outside fullscreen should not be considered main content.
https://bugs.webkit.org/show_bug.cgi?id=186063
Summary
Media elements outside fullscreen should not be considered main content.
Jer Noble
Reported
2018-05-29 15:07:24 PDT
Media elements outside fullscreen should not be considered main content.
Attachments
Patch
(15.61 KB, patch)
2018-05-29 15:11 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(15.65 KB, patch)
2018-05-29 15:29 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-05-29 15:08:11 PDT
<
rdar://problem/40630437
>
Jer Noble
Comment 2
2018-05-29 15:11:15 PDT
Created
attachment 341523
[details]
Patch
Jer Noble
Comment 3
2018-05-29 15:29:35 PDT
Created
attachment 341528
[details]
Patch
Eric Carlson
Comment 4
2018-05-30 10:11:43 PDT
Comment on
attachment 341528
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=341528&action=review
> Source/WebCore/testing/Internals.h:45 > +#if ENABLE(VIDEO) > +#include "MediaElementSession.h" > +#endif
Nit: you can forward declare the enum instead of including the header here
WebKit Commit Bot
Comment 5
2018-05-30 11:00:29 PDT
Comment on
attachment 341528
[details]
Patch Clearing flags on attachment: 341528 Committed
r232300
: <
https://trac.webkit.org/changeset/232300
>
WebKit Commit Bot
Comment 6
2018-05-30 11:00:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug